k8s-yaml/create_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-pod
  name: nginx-pod
  namespace: test
spec:
  containers:
    - image: nginx:latest
      name: nginx
