k8s-yaml/create_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret
spec:
  containers:
    - name: pod-with-secret
      image: nginx
      volumeMounts:
        - name: my-secret
          mountPath: "/etc/secret"
          readOnly: true
  volumes:
    - name: my-secret
      secret:
        secretName: password
